fix grep sha in repo
Will return 1 if found, meaning needs to exit if exists

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -104,7 +104,7 @@ jobs:
           SERVICE_NAME: ${{ inputs.service-identifier }}
           STAGE: ${{ inputs.stage }}
         run: |
-          aws ecr list-images --repository-name $SERVICE_NAME-$STAGE | grep ${{ github.sha }}
+          aws ecr list-images --repository-name $SERVICE_NAME-$STAGE | grep -vz ${{ github.sha }}
 
   init_message:
     name: Sending first Slack message
