--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -266,18 +266,6 @@ jobs:
             GITHUB_RUN_ID=${{ github.run_id }}
             ${{ steps.meta.outputs.labels }}
           tags: ${{ steps.meta.outputs.tags }}
-      - name: Publish result message to slack
-        uses: monta-app/slack-notifier-cli-action@main
-        if: runner.arch == 'X64' && ( failure() || success() || cancelled() )
-        with:
-          github-context: ${{ toJson(github) }}
-          job-type: "build"
-          job-status: ${{ job.status }}
-          service-name: ${{ inputs.service-name }}
-          service-emoji: ${{ inputs.service-emoji }}
-          slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-          slack-channel-id: "C01KL9FUPNK"
-          slack-message-id: ${{ needs.init_message.outputs.slack-message-id }}
 
   push-manifest-list:
     name: Push Manifest
@@ -331,6 +319,18 @@ jobs:
           docker manifest annotate --arch amd64 $ECR_IMAGE_URL:latest $ECR_IMAGE_URL:${{ github.sha }}-X64
           docker manifest inspect $ECR_IMAGE_URL:latest
           docker manifest push $ECR_IMAGE_URL:latest
+      - name: Publish result message to slack
+        uses: monta-app/slack-notifier-cli-action@main
+        if: ${{ always() }}
+        with:
+          github-context: ${{ toJson(github) }}
+          job-type: "build"
+          job-status: ${{ needs.build.result }}
+          service-name: ${{ inputs.service-name }}
+          service-emoji: ${{ inputs.service-emoji }}
+          slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
+          slack-channel-id: "C01KL9FUPNK"
+          slack-message-id: ${{ needs.test.outputs.slack-message-id }}
 
   deploy:
     name: Deploy
