--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -233,6 +233,8 @@ jobs:
     if: success()
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    outputs:
+      slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
     steps:
       - name: Check for secret.AWS_ACCOUNT_ID availability
         id: secret-check
@@ -282,6 +284,7 @@ jobs:
       - name: Publish result message to slack
         uses: monta-app/slack-notifier-cli-action@main
         if: ${{ always() }}
+        id: publish-slack
         with:
           github-context: ${{ toJson(github) }}
           job-type: "build"
@@ -294,8 +297,7 @@ jobs:
 
   deploy:
     name: Deploy
-    needs: [test, build, push-manifest-list]
-    if: success()
+    needs: push-manifest-list
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -310,7 +312,7 @@ jobs:
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
-          slack-message-id: ${{ needs.build.outputs.slack-message-id }}
+          slack-message-id: ${{ needs.push-manifest-list.outputs.slack-message-id }}
       - name: Check out manifest repository
         uses: actions/checkout@master
         with:
