--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -66,10 +66,13 @@ permissions:
   actions: read # This is required for 8398a7/action-slack
 
 jobs:
-  test:
-    name: Test
+
+  init_message:
+    name: Sending first Slack message
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 5
+    outputs:
+      slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
     steps:
       - name: Publish progress message to slack
         uses: monta-app/slack-notifier-cli-action@main
@@ -82,6 +85,15 @@ jobs:
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
+
+  test:
+    name: Test
+    needs: init_message
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    outputs:
+      slack-message-id: ${{ needs.init_message.outputs.slack-message-id }}
+    steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Set up JDK
@@ -104,7 +116,7 @@ jobs:
           fi
         shell: bash
       - name: Upload test results
-        if: ${{ always() }}
+        if: always()
         uses: actions/upload-artifact@v3
         with:
           name: test-result
@@ -114,7 +126,7 @@ jobs:
           retention-days: 2
       - name: Publish result message to slack
         uses: monta-app/slack-notifier-cli-action@main
-        if: ${{ always() }}
+        if: always()
         with:
           github-context: ${{ toJson(github) }}
           job-type: "test"
@@ -123,13 +135,11 @@ jobs:
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
-          slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
-    outputs:
-      slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
+          slack-message-id: ${{ needs.init_message.outputs.slack-message-id }}
 
   build:
     name: Build
-    needs: test
+    needs: init_message
     runs-on: ${{ matrix.runner-type }} # Runs on both self-hosted arm64 as well as hosted amd64
     timeout-minutes: 30
     strategy:
@@ -137,9 +147,11 @@ jobs:
         runner-type:
         - ubuntu-latest
         - [self-hosted, linux, ARM64]
+    outputs:
+      slack-message-id: ${{ needs.init_message.outputs.slack-message-id }}
     steps:
       - name: Publish progress message to slack
-        if: ${{ runner.arch == 'X64' }}
+        if: runner.arch == 'X64'
         uses: monta-app/slack-notifier-cli-action@main
         id: publish-slack
         with:
@@ -150,7 +162,7 @@ jobs:
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
-          slack-message-id: ${{ needs.test.outputs.slack-message-id }}
+          slack-message-id: ${{ needs.init_message.outputs.slack-message-id }}
       - name: Checkout
         uses: actions/checkout@v3
       - name: Set up JDK
@@ -214,14 +226,15 @@ jobs:
             GITHUB_RUN_ID=${{ github.run_id }}
             ${{ steps.meta.outputs.labels }}
           tags: ${{ steps.meta.outputs.tags }}
-    outputs:
-      slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
 
   push-manifest-list:
     name: Push Manifest
     needs: [build, test]
+    if: success()
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    outputs:
+      slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
     steps:
       - name: Check for secret.AWS_ACCOUNT_ID availability
         id: secret-check
@@ -271,6 +284,7 @@ jobs:
       - name: Publish result message to slack
         uses: monta-app/slack-notifier-cli-action@main
         if: ${{ always() }}
+        id: publish-slack
         with:
           github-context: ${{ toJson(github) }}
           job-type: "build"
@@ -283,7 +297,7 @@ jobs:
 
   deploy:
     name: Deploy
-    needs: [build, push-manifest-list]
+    needs: push-manifest-list
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -298,7 +312,7 @@ jobs:
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
-          slack-message-id: ${{ needs.build.outputs.slack-message-id }}
+          slack-message-id: ${{ needs.push-manifest-list.outputs.slack-message-id }}
       - name: Check out manifest repository
         uses: actions/checkout@master
         with:
@@ -327,7 +341,7 @@ jobs:
           repository: monta-app/kube-manifests
       - name: Publish result message to slack
         uses: monta-app/slack-notifier-cli-action@main
-        if: ${{ always() }}
+        if: always()
         with:
           github-context: ${{ toJson(github) }}
           job-type: "deploy"
@@ -338,9 +352,11 @@ jobs:
           slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
 
+  # needed because can't run slack notifier cli on arm64, so can't update with always() in the same build job
   update_build_fail:
     name: Update Slack message for build fail
-    needs: [test, build]
+    # needs init_message in order to get the message id, because build might not output one if fails
+    needs: [init_message, build]
     if: failure()
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -356,4 +372,4 @@ jobs:
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
-          slack-message-id: ${{ needs.test.outputs.slack-message-id }}
+          slack-message-id: ${{ needs.init_message.outputs.slack-message-id }}
