--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -80,7 +80,8 @@ jobs:
       slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
     steps:
       - name: Publish progress message to slack
-        uses: monta-app/slack-notifier-cli-action@main
+        uses: monta-app/slack-notifier-cli-action@feat/fix-arg-list-too-long
+#        uses: monta-app/slack-notifier-cli-action@main
         id: publish-slack
         with:
           job-type: "test"
@@ -129,7 +130,8 @@ jobs:
             /home/runner/.gradle/daemon/**/daemon-*.out.log
           retention-days: 2
       - name: Publish result message to slack
-        uses: monta-app/slack-notifier-cli-action@main
+        uses: monta-app/slack-notifier-cli-action@feat/fix-arg-list-too-long
+#        uses: monta-app/slack-notifier-cli-action@main
         if: always()
         with:
           job-type: "test"
@@ -155,7 +157,8 @@ jobs:
     steps:
       - name: Publish progress message to slack
         if: runner.arch == 'X64'
-        uses: monta-app/slack-notifier-cli-action@main
+        uses: monta-app/slack-notifier-cli-action@feat/fix-arg-list-too-long
+#        uses: monta-app/slack-notifier-cli-action@main
         id: publish-slack
         with:
           job-type: "build"
@@ -284,7 +287,8 @@ jobs:
           docker manifest inspect $ECR_IMAGE_URL:latest
           docker manifest push $ECR_IMAGE_URL:latest
       - name: Publish result message to slack
-        uses: monta-app/slack-notifier-cli-action@main
+        uses: monta-app/slack-notifier-cli-action@feat/fix-arg-list-too-long
+#        uses: monta-app/slack-notifier-cli-action@main
         if: ${{ always() }}
         id: publish-slack
         with:
@@ -303,7 +307,8 @@ jobs:
     timeout-minutes: 5
     steps:
       - name: Publish progress message to slack
-        uses: monta-app/slack-notifier-cli-action@main
+        uses: monta-app/slack-notifier-cli-action@feat/fix-arg-list-too-long
+#        uses: monta-app/slack-notifier-cli-action@main
         id: publish-slack
         with:
           job-type: "deploy"
@@ -340,7 +345,8 @@ jobs:
           directory: './manifests'
           repository: monta-app/kube-manifests
       - name: Publish result message to slack
-        uses: monta-app/slack-notifier-cli-action@main
+        uses: monta-app/slack-notifier-cli-action@feat/fix-arg-list-too-long
+#        uses: monta-app/slack-notifier-cli-action@main
         if: always()
         with:
           job-type: "deploy"
@@ -361,7 +367,8 @@ jobs:
     timeout-minutes: 5
     steps:
       - name: Publish result message to slack
-        uses: monta-app/slack-notifier-cli-action@main
+        uses: monta-app/slack-notifier-cli-action@feat/fix-arg-list-too-long
+#        uses: monta-app/slack-notifier-cli-action@main
         if: ${{ always() }}
         with:
           job-type: "build"
