--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -80,7 +80,7 @@ jobs:
       slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
     steps:
       - name: Publish progress message to slack
-        uses: monta-app/slack-notifier-cli-action@feat/fix-arg-list-too-long
+        uses: monta-app/slack-notifier-cli-action@fix-arg-list-too-long
 #        uses: monta-app/slack-notifier-cli-action@main
         id: publish-slack
         with:
@@ -130,7 +130,7 @@ jobs:
             /home/runner/.gradle/daemon/**/daemon-*.out.log
           retention-days: 2
       - name: Publish result message to slack
-        uses: monta-app/slack-notifier-cli-action@feat/fix-arg-list-too-long
+        uses: monta-app/slack-notifier-cli-action@fix-arg-list-too-long
 #        uses: monta-app/slack-notifier-cli-action@main
         if: always()
         with:
@@ -157,7 +157,7 @@ jobs:
     steps:
       - name: Publish progress message to slack
         if: runner.arch == 'X64'
-        uses: monta-app/slack-notifier-cli-action@feat/fix-arg-list-too-long
+        uses: monta-app/slack-notifier-cli-action@fix-arg-list-too-long
 #        uses: monta-app/slack-notifier-cli-action@main
         id: publish-slack
         with:
@@ -287,7 +287,7 @@ jobs:
           docker manifest inspect $ECR_IMAGE_URL:latest
           docker manifest push $ECR_IMAGE_URL:latest
       - name: Publish result message to slack
-        uses: monta-app/slack-notifier-cli-action@feat/fix-arg-list-too-long
+        uses: monta-app/slack-notifier-cli-action@fix-arg-list-too-long
 #        uses: monta-app/slack-notifier-cli-action@main
         if: ${{ always() }}
         id: publish-slack
@@ -307,7 +307,7 @@ jobs:
     timeout-minutes: 5
     steps:
       - name: Publish progress message to slack
-        uses: monta-app/slack-notifier-cli-action@feat/fix-arg-list-too-long
+        uses: monta-app/slack-notifier-cli-action@fix-arg-list-too-long
 #        uses: monta-app/slack-notifier-cli-action@main
         id: publish-slack
         with:
@@ -345,7 +345,7 @@ jobs:
           directory: './manifests'
           repository: monta-app/kube-manifests
       - name: Publish result message to slack
-        uses: monta-app/slack-notifier-cli-action@feat/fix-arg-list-too-long
+        uses: monta-app/slack-notifier-cli-action@fix-arg-list-too-long
 #        uses: monta-app/slack-notifier-cli-action@main
         if: always()
         with:
@@ -367,7 +367,7 @@ jobs:
     timeout-minutes: 5
     steps:
       - name: Publish result message to slack
-        uses: monta-app/slack-notifier-cli-action@feat/fix-arg-list-too-long
+        uses: monta-app/slack-notifier-cli-action@fix-arg-list-too-long
 #        uses: monta-app/slack-notifier-cli-action@main
         if: ${{ always() }}
         with:
