--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -80,8 +80,7 @@ jobs:
       slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
     steps:
       - name: Publish progress message to slack
-        uses: monta-app/slack-notifier-cli-action@fix-arg-list-too-long
-#        uses: monta-app/slack-notifier-cli-action@main
+        uses: monta-app/slack-notifier-cli-action@main
         id: publish-slack
         with:
           job-type: "test"
@@ -130,8 +129,7 @@ jobs:
             /home/runner/.gradle/daemon/**/daemon-*.out.log
           retention-days: 2
       - name: Publish result message to slack
-        uses: monta-app/slack-notifier-cli-action@fix-arg-list-too-long
-#        uses: monta-app/slack-notifier-cli-action@main
+        uses: monta-app/slack-notifier-cli-action@main
         if: always()
         with:
           job-type: "test"
@@ -157,8 +155,7 @@ jobs:
     steps:
       - name: Publish progress message to slack
         if: runner.arch == 'X64'
-        uses: monta-app/slack-notifier-cli-action@fix-arg-list-too-long
-#        uses: monta-app/slack-notifier-cli-action@main
+        uses: monta-app/slack-notifier-cli-action@main
         id: publish-slack
         with:
           job-type: "build"
@@ -287,8 +284,7 @@ jobs:
           docker manifest inspect $ECR_IMAGE_URL:latest
           docker manifest push $ECR_IMAGE_URL:latest
       - name: Publish result message to slack
-        uses: monta-app/slack-notifier-cli-action@fix-arg-list-too-long
-#        uses: monta-app/slack-notifier-cli-action@main
+        uses: monta-app/slack-notifier-cli-action@main
         if: ${{ always() }}
         id: publish-slack
         with:
@@ -307,8 +303,7 @@ jobs:
     timeout-minutes: 5
     steps:
       - name: Publish progress message to slack
-        uses: monta-app/slack-notifier-cli-action@fix-arg-list-too-long
-#        uses: monta-app/slack-notifier-cli-action@main
+        uses: monta-app/slack-notifier-cli-action@main
         id: publish-slack
         with:
           job-type: "deploy"
@@ -345,8 +340,7 @@ jobs:
           directory: './manifests'
           repository: monta-app/kube-manifests
       - name: Publish result message to slack
-        uses: monta-app/slack-notifier-cli-action@fix-arg-list-too-long
-#        uses: monta-app/slack-notifier-cli-action@main
+        uses: monta-app/slack-notifier-cli-action@main
         if: always()
         with:
           job-type: "deploy"
@@ -367,8 +361,7 @@ jobs:
     timeout-minutes: 5
     steps:
       - name: Publish result message to slack
-        uses: monta-app/slack-notifier-cli-action@fix-arg-list-too-long
-#        uses: monta-app/slack-notifier-cli-action@main
+        uses: monta-app/slack-notifier-cli-action@main
         if: ${{ always() }}
         with:
           job-type: "build"
