--- a/.github/workflows/push-open-api-spec.yaml
+++ b/.github/workflows/push-open-api-spec.yaml
@@ -53,6 +53,10 @@ jobs:
         shell: bash
         run: |
           curl --proto '=https' --tlsv1.2 -sSfL https://run.linkerd.io/install | sh
+      - name: Update Path with LinkerD CLI
+        shell: bash
+        run: |
+          echo "/home/runner/.linkerd2/bin" >> $GITHUB_PATH
       - name: Build Open API Spec
         shell: bash
         env:
