--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -157,7 +157,6 @@ jobs:
         uses: actions/checkout@master
         with:
           repository: monta-app/kube-manifests
-          path: 'kube-manifests'
           token: ${{ secrets.MANIFEST_REPO_PAT }}
       - name: Set up JDK
         uses: actions/setup-java@v3
@@ -211,7 +210,12 @@ jobs:
 
           # Find the first .yml file in the target directory
           YML_FILE=$(find . -type f -name '*.yml' | head -n 1)
-          K8S_NAMESPACE=$(cat kube-manifests/apps/$SERVICE_IDENTIFIER/$STAGE/cluster/config.yaml | yq '.namespace')
+
+          # Read namesapce from config.yaml
+          K8S_NAMESPACE=$(cat $GITHUB_WORKSPACE/kube-manifests/apps/$SERVICE_IDENTIFIER/$STAGE/cluster/config.yaml | yq '.namespace')
+
+          # Read service name from values.yaml
+          SERVICE_NAME=$(cat $GITHUB_WORKSPACE/kube-manifests/apps/$SERVICE_IDENTIFIER/$STAGE/app/values.yaml | yq '.[] | select(key == "laravel" or key == "kotlin").fullnameOverride')
 
           # Check if a .yml file was found and display the result or an error message
           if [ -z "${YML_FILE}" ]; then
@@ -219,7 +223,7 @@ jobs:
               exit 1
           fi
 
-          linkerd profile --ignore-cluster -n $K8S_NAMESPACE --open-api $YML_FILE $K8S_NAMESPACE >> service-profile.yaml
+          linkerd profile --ignore-cluster -n $K8S_NAMESPACE --open-api $YML_FILE $SERVICE_NAME >> service-profile.yaml
 
           SERVICE_PROFILE=$(realpath service-profile.yaml)
           echo "Service Profile path $SERVICE_PROFILE"
